--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "test": "vitest",
-    "build": "vite build",
+    "build": "farm build",
     "test-front": "playwright test",
-    "preview": "vite preview",
+    "preview": "farm preview",
     "preview-https": "serve dist",
     "mobile": "vite build --mode mobile && cap copy",
     "capacitor-assets": "bunx @capacitor/assets generate --assetPath assets --iconBackgroundColor '#111827' --iconBackgroundColorDark '#111827' --splashBackgroundColor '#111827' --splashBackgroundColorDark '#111827' --logoSplashScale 0.3",
@@ -15,7 +15,7 @@
     "sync": "cap sync",
     "sync:ios": "cap sync ios",
     "sync:android": "cap sync android",
-    "serve": "vite",
+    "serve": "farm",
     "prebuild-serve-dev": "ENV=local vite build --sourcemap true --minify false --assetsDir . && http-server ./dist -p 5173",
     "serve-dev": "ENV=local vite",
     "backend": "supabase start && supabase functions serve",
@@ -108,6 +108,8 @@
     "@capgo/inappbrowser": "^6.0.2",
     "@capgo/native-audio": "^6.3.2",
     "@capgo/native-market": "^6.0.1",
+    "@farmfe/cli": "^1.0.2",
+    "@farmfe/core": "^1.2.0",
     "@formkit/auto-animate": "1.0.0-pre-alpha.3",
     "@formkit/i18n": "^1.6.5",
     "@formkit/themes": "1.6.5",
