--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "@iconify-json/ion": "1.1.18",
     "@iconify-json/ls": "1.1.8",
     "@iconify/json": "^2.2.215",
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@playwright/test": "1.43.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
